add html.twig files

--- a/views/addressbook.html.twig
+++ b/views/addressbook.html.twig
@@ -4,6 +4,11 @@
   </head>
   <body>
     <h1>Address Book</h1>
-    <p>Contact:</p>
+    <div>
+      <p>Add a contact <a href='/create_contact'>here</a>.</p>
+      <form>
+        <button type='submit' class='button btn-danger'>Delete all contacts</button>
+      </form>
+    </div>
   </body>
 </html>
