--- a/views/deletecontact.html.twig
+++ b/views/deletecontact.html.twig
@@ -3,10 +3,9 @@
     <title>Address Book</title>
   </head>
   <body>
-    <h1>Address Book</h1>
-    <p>Contact:</p>
     <div>
-      
+      <p>All contacts removed.</p>
+      <p><a href='/'>go back</a></p>
     </div>
   </body>
 </html>
