--- a/views/createcontact.html.twig
+++ b/views/createcontact.html.twig
@@ -3,10 +3,10 @@
     <title>Address Book</title>
   </head>
   <body>
-    <h1>Address Book</h1>
-    <p>Contact:</p>
-    <div>
-      
-    </div>
+    <p>Contact added</p>
+    <p>{{ newcontact.getName }}</p>
+    <p>{{ newcontact.getPhoneNumber }}</p>
+    <p>{{ newcontact.getAddress }}</p>
+    <p><a href='/'>go back</a></p>
   </body>
 </html>
