add a README file

--- a/views/deletecontact.html.twig
+++ b/views/deletecontact.html.twig
@@ -4,7 +4,7 @@
   </head>
   <body>
     <div>
-      <p>All contacts removed.</p>
+      <p>Address book cleared!</p>
       <p><a href='/'>go back</a></p>
     </div>
   </body>
